--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,3 +3,6 @@
 coverage>=7.1.0, <8
 pytest>=7.2.1, <8
 pytest-cov>=4.0.0, <5
+requests_mock>=1.9.3, <2
+requests>=2.25.1, <3
+pytest-mock>=3.6.1, <4
